# Cocos-sdk

./: CMakeLists.txt  README.md
android/: Android.mk  Application.mk
android/java/com/cocos/rtc/: VideoCallPlugin.java
android/jni/: VideoCallJNI.cpp
docs/: VideoCallPlugin_Usage.txt
include/: VideoCallPlugin.h
ios/: VideoCallPluginIOS.h  VideoCallPluginIOS.mm
scripts/: run_sandbox.bat  run_sandbox.sh
src/: VideoCallPlugin.cpp
src/core/: VideoCallCore.cpp  VideoCallCore.h
test/: VideoCallTestScene.cpp  VideoCallTestScene.h
test/sandbox/: SandboxConfig.cpp  SandboxConfig.h  SandboxMain.cpp
